--- a/utility-node/haproxy.cfg
+++ b/utility-node/haproxy.cfg
@@ -2,8 +2,8 @@ global
     log 127.0.0.1     local0
     log 127.0.0.1     local1 notice
     maxconn           256000
-    user              haproxy
-    group             haproxy
+#    user              haproxy
+#    group             haproxy
     spread-checks     5
     daemon
     quiet
@@ -22,12 +22,25 @@ listen stats :8888
     stats hide-version
     stats realm haproxy\ stats
     stats uri /
-    stats auth admin:admin
+    #stats auth admin:admin
+    rspadd Access-Control-Allow-Origin:
     stats refresh 5s
+    #http-response add-header Access-Control-Allow-Origin: *
+    #capture request header origin len 128
+    #http-response add-header Access-Control-Allow-Origin %[capture.req.hdr(0)] if { capture.req.hdr(0) -m found }
+    #rspadd Access-Control-Allow-Headers:\ Origin,\ X-Requested-With,\ Content-Type,\ Accept  if { capture.req.hdr(0) -m found }
 
+
+
+listen stats :8887
+    mode http
+    stats enable
+    stats hide-version
+    stats realm Haproxy\ Statistics
+    stats uri /
 
 frontend riak
-    bind               utility.pi:8087
+    bind               0.0.0.0:8087
     mode               tcp
     option             tcplog
     option             contstats
@@ -37,15 +50,14 @@ frontend riak
 backend riak_backend
     balance            leastconn
     mode               tcp
-    server riak1 riak1.pi:8087 weight 1 maxconn 1024 check
-    server riak2 riak2.pi:8087 weight 1 maxconn 1024 check
-    server riak3 riak3.pi:8087 weight 1 maxconn 1024 check
-    server riak4 riak4.pi:8087 weight 1 maxconn 1024 check
-    server riak5 riak5.pi:8087 weight 1 maxconn 1024 check
-
+    server riak1 riak1.local:8087 weight 1 maxconn 1024 check
+    server riak2 riak2.local:8087 weight 1 maxconn 1024 check
+    server riak3 riak3.local:8087 weight 1 maxconn 1024 check
+    server riak4 riak4.local:8087 weight 1 maxconn 1024 check
+    server riak5 riak5.local:8087 weight 1 maxconn 1024 check
 
 frontend riak_http
-    bind               utility.pi:8098
+    bind               0.0.0.0:8098
     mode               http
     option             httplog
     default_backend    riak_backend_http
@@ -53,8 +65,8 @@ frontend riak_http
 backend riak_backend_http
     balance            leastconn
     mode               http
-    server riak1 riak1.pi:8098 weight 1 maxconn 1024 check
-    server riak2 riak2.pi:8098 weight 1 maxconn 1024 check
-    server riak3 riak3.pi:8098 weight 1 maxconn 1024 check
-    server riak4 riak4.pi:8098 weight 1 maxconn 1024 check
-    server riak5 riak5.pi:8098 weight 1 maxconn 1024 check
+    server riak1 riak1.local:8098 weight 1 maxconn 1024 check
+    server riak2 riak2.local:8098 weight 1 maxconn 1024 check
+    server riak3 riak3.local:8098 weight 1 maxconn 1024 check
+    server riak4 riak4.local:8098 weight 1 maxconn 1024 check
+    server riak5 riak5.local:8098 weight 1 maxconn 1024 check
